--- a/veri_yapilari/readme
+++ b/veri_yapilari/readme
@@ -1,1 +1,1 @@
-2023-2024 yılı güz dönemine ait doç. dr. ahmet çınarın veri yapıları dersinde alınan notlardır.
+2023-2024 yılı güz dönemine ait sayin doç. dr. ahmet çınar'ın veri yapıları dersinde alınan notlardır.
